# cookiecutter-ev3dev-lang-python

./: LICENSE.txt  cookiecutter.json
hooks/: post_gen_project.py  pre_gen_project.py
{{cookiecutter.project_name}}/: .gitattributes  main.py  pyproject.toml
