[tool.poetry]
name = "{{cookiecutter.project_name}}"
version = "0.1.0"
description = "{{cookiecutter.description}}"
authors = ["{{cookiecutter.author}}"]

[tool.poetry.dependencies]
python = "^3.5.3"
python-ev3dev2 = "^2.0.0"

[tool.poetry.dev-dependencies]
flake8 = "^3.7.9"
rope = "^0.16.0"
yapf = "^0.29.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
